# laughing-chainsaw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROTOCOL.md  README.md  SECURITY.md  key.hex.example  listen_oura.py  mkdocs.yml  oura_ble.py  package.json  pairing_analysis.py  parse_pklg.py  pnpm-lock.yaml  pnpm-workspace.yaml  probe_oura.py  read_battery.py  ring_ctl.py  scan_oura.py
.github/: REPOSITORY_SETTINGS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-desktop.yml  deploy-pages.yml  release.yml
apps/android/: README.md  gradle.properties.example  settings.gradle.kts
apps/web/: .env.example  .gitignore  package-lock.json  package.json
backend/: .gitignore
backend/supabase/: .env.example
backend/worker/: .env.example  package.json  tsconfig.json  wrangler.toml
core/librering-core/: Cargo.toml  README.md
core/librering-core/src/: error.rs  lib.rs  packet.rs  protocol.rs
desktop/: next.config.ts  package.json
desktop/src/lib/: auth.ts  (+6 more)
docs/: ARCHITECTURE.md  BACKEND.md  BACKEND_COMPARISON.md  CLIENTS.md  CONTRIBUTING.md  DEPLOY.md  OPEN_SOURCE.md  SETUP_CLOUD.md  code-of-conduct.md  concepts.md  index.md  legal.md  protocol.md  requirements.txt  security.md
ios/LibreRing/: project.yml
scripts/: check-cloud-env.mjs  test-supabase.mjs  wire-env.mjs
tools/: .gitignore  capture_api.py  correlate.py  listen_oura.py  oura_parsers.py  oura_protocol.py  pair_oura.py  requirements.txt  services.example.json
tools/dissectors/: oura.lua
(+69 files in other folders)
