[package]
name = "librering-core"
version = "0.1.0"
edition = "2021"
description = "Shared Oura Ring BLE protocol core (Rust)"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "2.0"
uniffi = { version = "0.29", optional = true }

[features]
default = []
uniffi = ["dep:uniffi"]

[build-dependencies]
uniffi = { version = "0.29", features = ["build"], optional = true }
